[tool.poetry]
name = "vtils"
version = "0.0.1"
description = "A Python package providing utility functions for Data Visualization."
authors = ["João Palmeiro <joaommpalmeiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^1.0", python = "<3.8"}
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
mypy = "^0.812"
isort = "^5.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
